--- a/AIQIforHaier.vcxproj
+++ b/AIQIforHaier.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ExternalIncludePath>C:\Program Files (x86)\spdlog\include;$(ExternalIncludePath)</ExternalIncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -138,6 +141,7 @@
     <ClInclude Include="equnit.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GPIO.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="MessageQueue.h" />
     <ClInclude Include="peSwitch.h" />
     <ClInclude Include="product.h" />
@@ -145,6 +149,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SerialCommunication.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WzSerialPort.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AIQIforHaier.cpp" />
@@ -153,6 +158,7 @@
     <ClCompile Include="CodeReader.cpp" />
     <ClCompile Include="equnit.cpp" />
     <ClCompile Include="GPIO.cpp" />
+    <ClCompile Include="Log.cpp" />
     <ClCompile Include="peSwitch.cpp" />
     <ClCompile Include="PortAudio\pa_allocation.c" />
     <ClCompile Include="PortAudio\pa_ringbuffer.c" />
@@ -160,6 +166,7 @@
     <ClCompile Include="product.cpp" />
     <ClCompile Include="product2btest.cpp" />
     <ClCompile Include="SerialCommunication.cpp" />
+    <ClCompile Include="WzSerialPort.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AIQIforHaier.rc" />
