0. ServerIp/ServerPort/PipelineCode/StopFalgPin允许在配置文件中配置 1. 日志刷盘周期设为3s 2. 整理日志

--- a/basicconfig/basicConfig.json
+++ b/basicconfig/basicConfig.json
@@ -1,4 +1,8 @@
 {
+	"pipelineCode": "CX202309141454000002",
+    "serverIp": "192.168.0.189",
+	"serverPort": 9003,
+	"stopFlagPin": 1,
     "deviceConfigList":[
         {
             "deviceTypeId":"1706875521972076547",
